--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Wikivoyage offline</string>
+    <string name="preferences">Preferences</string>
+    
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
